# ddnsperf

./: .gitignore  Cargo.toml  README.md
docs/: spec.md
docs/superpowers/plans/: 2026-07-12-ddnsperf-mvp.md  2026-07-12-ddnsperf-phase2-engine.md  2026-07-12-ddnsperf-phase3-perf.md  2026-07-20-overload-testing.md
docs/superpowers/specs/: 2026-07-12-ddnsperf-design.md  2026-07-20-overload-testing.md
src/: cli.rs  dns.rs  engine.rs  main.rs  perf.rs  records.rs  stats.rs
