[package]
name = "ddnsperf"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ddnsperf"
path = "src/main.rs"

[dependencies]
hickory-client = { version = "0.24", features = ["dnssec-ring"] }
hickory-proto  = "0.24"
tokio          = { version = "1", features = ["full"] }
clap           = { version = "4", features = ["derive"] }
base64         = "0.22"
governor       = "0.6"
indicatif      = "0.17"
ipnet          = "2"
rand           = "0.8"
nonzero_ext    = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
